try to fix firefox mobile font-size too small

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-  font-size: 15px;/* font-size: 16px; */
+  font-size: 1em;/* font-size: 16px; */
 }
 
 .tip-modal {
